# clawkeeper

./: .gitignore  .vercelignore  AGENTS.md  LICENSE  README.md  TEST-PLAN.md  clawkeeper.sh
.github/workflows/: chart-release.yml  docker-build.yml  openclaw-compat.yml
battle-cards/: vs-clawsec.md  vs-openclaw-native.md
charts/openclaw-stack/: Chart.yaml  README.md  values-development.yaml  values-production.yaml  values.yaml
checks/admin_user/: check.sh  check.toml
checks/airdrop/: check.sh  check.toml  remediate.sh
checks/analytics/: check.sh  check.toml  remediate.sh
checks/automatic_login/: check.sh  check.toml  remediate.sh
checks/bluetooth/: check.sh  check.toml  remediate.sh
checks/container_security/: check.sh  check.toml
checks/credential_exposure/: check.sh  check.toml
desktop/: index.html  package-lock.json  package.json
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: check_catalog.rs  check_runner.rs  deploy.rs  lib.rs  main.rs  types.rs
docker/: Dockerfile  Dockerfile.standard
docs/: COMPETITIVE-ANALYSIS-NEMOCLAW.md  PRD-NANOCLAW-SUPPORT.md
lib/: agent.sh  deploy.sh  helpers.sh  orchestrator.sh  scanner.sh  shield.sh  ui.sh  uninstall.sh
runtime-shield/: SKILL.md  package.json  tsconfig.json
scripts/: bundle.sh  e2e-cli-test.sh  e2e-test.ts  generate-cli-reference.ts  generate-cve-feed.ts  linode-install.sh  linode-stackscript.sh  verify-parity.sh
web/: .gitignore  mdx-components.tsx  package-lock.json  package.json  vercel.json  vitest.config.ts
(+335 files in other folders)
